# cosmica

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  LICENSE-MIT  README.md  justfile  mkdocs.yml  pyproject.toml  renovate.json5  versions.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: action_item_en.md  action_item_ja.md  bug_report.md
.github/workflows/: actionlint.yaml  ci.yaml  deploy-docs.yaml  release.yaml
0.0.1.dev1/: 404.html  index.html  sitemap.xml
0.0.1.dev1/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/developers/releasing/: index.html
0.3.0/developers/setup/: index.html
0.3.0/developers/tips/: index.html
0.3.0/reference/SUMMARY/: index.html
0.3.0/reference/cosmica/: index.html
0.3.0/reference/cosmica/cli/: index.html
0.3.0/reference/cosmica/comm_link/: index.html
0.3.0/reference/cosmica/dtos/: index.html
0.3.0/reference/cosmica/dynamics/: index.html
0.3.0/reference/cosmica/experimental_packet_routing/: index.html
0.3.0/reference/cosmica/models/: index.html
0.3.0/reference/cosmica/scenario/: index.html
0.3.0/reference/cosmica/topology/: index.html
0.3.0/reference/cosmica/utils/: index.html
0.3.0/reference/cosmica/visualization/: index.html
0.3.0/search/: search_index.json
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/developers/releasing/: index.html
0.4.0/developers/setup/: index.html
0.4.0/developers/tips/: index.html
0.4.0/reference/SUMMARY/: index.html
0.4.0/reference/cosmica/: index.html
0.4.0/reference/cosmica/comm_link/: index.html
0.4.0/reference/cosmica/dtos/: index.html
0.4.0/reference/cosmica/dynamics/: index.html
0.4.0/reference/cosmica/experimental_packet_routing/: index.html
0.4.0/reference/cosmica/models/: index.html
0.4.0/reference/cosmica/scenario/: index.html
0.4.0/reference/cosmica/topology/: index.html
0.4.0/reference/cosmica/utils/: index.html
0.4.0/reference/cosmica/visualization/: index.html
0.4.0/search/: search_index.json
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
0.5.0/developers/releasing/: index.html
0.5.0/developers/setup/: index.html
0.5.0/developers/tips/: index.html
0.5.0/reference/SUMMARY/: index.html
0.5.0/reference/cosmica/: index.html
0.5.0/reference/cosmica/comm_link/: index.html
0.5.0/reference/cosmica/dtos/: index.html
0.5.0/reference/cosmica/dynamics/: index.html
0.5.0/reference/cosmica/experimental_packet_routing/: index.html
0.5.0/reference/cosmica/models/: index.html
0.5.0/reference/cosmica/scenario/: index.html
0.5.0/reference/cosmica/topology/: index.html
0.5.0/reference/cosmica/utils/: index.html
0.5.0/reference/cosmica/visualization/: index.html
0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
0.6.0/developers/releasing/: index.html
0.6.0/developers/setup/: index.html
0.6.0/developers/tips/: index.html
0.6.0/reference/SUMMARY/: index.html
0.6.0/reference/cosmica/: index.html
0.6.0/reference/cosmica/comm_link/: index.html
0.6.0/reference/cosmica/dtos/: index.html
0.6.0/reference/cosmica/dynamics/: index.html
0.6.0/reference/cosmica/models/: index.html
0.6.0/reference/cosmica/scenario/: index.html
0.6.0/reference/cosmica/topology/: index.html
0.6.0/reference/cosmica/utils/: index.html
0.6.0/reference/cosmica/visualization/: index.html
0.6.0/search/: search_index.json
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/developers/releasing/: index.html
dev/developers/setup/: index.html
dev/developers/tips/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/cosmica/: index.html
dev/reference/cosmica/cli/: index.html
dev/reference/cosmica/comm_link/: index.html
dev/reference/cosmica/dtos/: index.html
dev/search/: search_index.json
docs/: index.md
docs/developers/: releasing.md  setup.md  tips.md
examples/: README.md  basic_simulation.py  orbit_propagation.py
scripts/: gen_ref_pages.py
src/cosmica/: __init__.py
src/cosmica/cli/: main.py  plot.py
src/cosmica/comm_link/: __init__.py  base.py  coordinator.py  gateway_to_gateway.py  gateway_to_internet.py  gateway_to_sat.py  geometric.py  internet_to_gateway.py  rate_distance_calculator.py  sat_to_gateway.py  sat_to_ground.py  sat_to_sat.py  uncertainty.py
src/cosmica/dtos/: __init__.py  dynamics_data.py
src/cosmica/dynamics/: __init__.py  constellation.py  orbit.py  plotting.py  sun_dynamics.py
src/cosmica/experimental_packet_routing/: README.md  __init__.py  calc_forwarding_table_from_graph.py  case_definitions.py  comm_data.py  dtos.py  forwarding_table.py  forwarding_table_time_list.py  lsa_case_definition.py  node_knowledge.py  routing_result_visualizer.py  simulator.py  space_time_graph.py  use_node_knowledge.py  utility.py
src/cosmica/models/: __init__.py  constellation.py  demand.py  gateway.py  internet.py  node.py  orbit.py  satellite.py  scenario.py  terminal.py  user.py
src/cosmica/scenario/: demand_generation.py  gateway_network.py  maritime.py  population.py
src/cosmica/topology/: __init__.py  gateway_to_gateway.py  gateway_to_internet.py  ground_to_constellation.py  ground_to_usersatellite.py  intra_constellation.py  usersatellite_gateway_to_constellation.py  usersatellite_to_constellation.py
src/cosmica/utils/: constants.py  coordinates.py  gauss_beam.py  vector.py
src/cosmica/visualization/: README.md  equirectangular.py  plotting.py  utils.py
src/package_name_goes_here/: __init__.py
tests/: conftest.py  test_square.py  test_version.py
tests/comm_link/: test_directional_capacity.py
tests/data/: constellation-test.toml  gateways-test.toml
tests/data-v2/: constellation.toml
tests/dynamics/: SNAPSHOT_TESTING.md  test_orbit.py  test_orbit_snapshot.py
tests/dynamics/__snapshots__/: test_orbit_snapshot.ambr
tests/models/: test_demand.py  test_gateway.py  test_orbit.py
tests/satellite_dynamics/: test_satellite_orbit.py
tests/scenario/: test_demand_generation.py  test_gateway_network.py
tests/utils/: test_coordinates.py
(+261 files in other folders)
